// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial errors 1`] = `
<WithStyles(Paper)
  className="BookmarkAddForm-root-1"
>
  <Form>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        className="BookmarkAddForm-fields-2"
        item={true}
      >
        <TextField
          error={false}
          fullWidth={true}
          id="url"
          label="URL"
          margin="normal"
          required={false}
          select={false}
          value=""
          variant="standard"
        />
        <TextField
          error={false}
          fullWidth={true}
          id="title"
          label="Title"
          margin="normal"
          required={false}
          select={false}
          value=""
          variant="standard"
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Button)
      aria-label="Add"
      className="BookmarkAddForm-button-4"
      color="primary"
      disabled={true}
      type="submit"
      variant="fab"
    >
      <pure(AddIcon) />
    </WithStyles(Button)>
  </Form>
</WithStyles(Paper)>
`;

exports[`not valid, not submitting 1`] = `
<WithStyles(Paper)
  className="BookmarkAddForm-root-1"
>
  <Form>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        className="BookmarkAddForm-fields-2"
        item={true}
      >
        <TextField
          error={false}
          fullWidth={true}
          id="url"
          label="URL"
          margin="normal"
          required={false}
          select={false}
          value=""
          variant="standard"
        />
        <TextField
          error={false}
          fullWidth={true}
          id="title"
          label="Title"
          margin="normal"
          required={false}
          select={false}
          value=""
          variant="standard"
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Button)
      aria-label="Add"
      className="BookmarkAddForm-button-4"
      color="primary"
      disabled={true}
      type="submit"
      variant="fab"
    >
      <pure(AddIcon) />
    </WithStyles(Button)>
  </Form>
</WithStyles(Paper)>
`;

exports[`show errors 1`] = `
<WithStyles(Paper)
  className="BookmarkAddForm-root-1"
>
  <Form>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        className="BookmarkAddForm-fields-2"
        item={true}
      >
        <TextField
          error={true}
          fullWidth={true}
          helperText="Required!"
          id="url"
          label="URL"
          margin="normal"
          required={false}
          select={false}
          value=""
          variant="standard"
        />
        <TextField
          error={true}
          fullWidth={true}
          helperText="Required!"
          id="title"
          label="Title"
          margin="normal"
          required={false}
          select={false}
          value=""
          variant="standard"
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Button)
      aria-label="Add"
      className="BookmarkAddForm-button-4"
      color="primary"
      disabled={true}
      type="submit"
      variant="fab"
    >
      <pure(AddIcon) />
    </WithStyles(Button)>
  </Form>
</WithStyles(Paper)>
`;

exports[`valid, not submitting 1`] = `
<WithStyles(Paper)
  className="BookmarkAddForm-root-1"
>
  <Form>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        className="BookmarkAddForm-fields-2"
        item={true}
      >
        <TextField
          error={false}
          fullWidth={true}
          id="url"
          label="URL"
          margin="normal"
          required={false}
          select={false}
          value="http://foo.com"
          variant="standard"
        />
        <TextField
          error={false}
          fullWidth={true}
          id="title"
          label="Title"
          margin="normal"
          required={false}
          select={false}
          value="my title"
          variant="standard"
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Button)
      aria-label="Add"
      className="BookmarkAddForm-button-4"
      color="primary"
      disabled={false}
      type="submit"
      variant="fab"
    >
      <pure(AddIcon) />
    </WithStyles(Button)>
  </Form>
</WithStyles(Paper)>
`;

exports[`valid, submitting 1`] = `
<WithStyles(Paper)
  className="BookmarkAddForm-root-1"
>
  <Form>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        className="BookmarkAddForm-fields-2"
        item={true}
      >
        <TextField
          error={false}
          fullWidth={true}
          id="url"
          label="URL"
          margin="normal"
          required={false}
          select={false}
          value="http://foo.com"
          variant="standard"
        />
        <TextField
          error={false}
          fullWidth={true}
          id="title"
          label="Title"
          margin="normal"
          required={false}
          select={false}
          value="my title"
          variant="standard"
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Button)
      aria-label="Add"
      className="BookmarkAddForm-button-4"
      color="primary"
      disabled={true}
      type="submit"
      variant="fab"
    >
      <pure(AddIcon) />
    </WithStyles(Button)>
  </Form>
</WithStyles(Paper)>
`;
